--- a/pom.xml
+++ b/pom.xml
@@ -29,11 +29,32 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+<!--  
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
+		</dependency> -->
+		<dependency>
+        	<groupId>com.github.gwenn</groupId>
+        	<artifactId>sqlite-dialect</artifactId>
+        	<version>0.1.1</version>
+    	</dependency>
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.30.1</version>
+		</dependency>
+		<!--  
+		<dependency>
+  			<groupId>com.enigmabridge</groupId>
+  			<artifactId>hibernate4-sqlite-dialect</artifactId>
+  			<version>0.1.2</version>
+		</dependency> -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
