--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.driver-class-name = org.sqlite.JDBC
 
+spring.datasource.url=jdbc:sqlite:/opt/SpringToolSuitEditor/MarketPlace-BootcampProject/MarketPlace.sqlite
+
+spring.jpa.database-platform=org.sqlite.hibernate.dialect.SQLiteDialect
+spring.jpa.hibernate.ddl-auto = update
